--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="./Portfolio.html">Портфолио</a>
                 </li>
                 <li>
-                     <a href="">Контакты</a> 
+                     <a href="#address">Контакты</a> 
                 </li>
             </ul>
         </nav>
@@ -194,7 +194,7 @@
     </main>    
     <footer>
         <a class="logo" href="">Web Studio</a>
-        <address>            
+        <address id="address">            
             <ul>
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
                 <li>
