--- a/Portfolio.html
+++ b/Portfolio.html
@@ -117,7 +117,7 @@
         </section>
     </main>    
     <footer>
-        <a class="logo" href="">Web Studio</a>
+        <a class="logo" href="./index.html">Web Studio</a>
         <address id="address">
             <ul>
                 <li>г. Киев, пр-т Леси Украинки, 26</li>
