подсоединил вторую страницу и подогнал размер под экран

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,24 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="Top_Line">
-        <a href="./index.html">Web Studio</a>
+    <header class="header">
         <nav>
-            <ul>
-                <li> <a href="./index.html">Студия</a> </li>
-                <li> <a href="./Portfolio.html">Портфолио</a> </li>
-                <li> <a href="#address">Контакты</a> </li>
+        <a class="header-logo" href="./index.html">Web <span class="logo-studio">Studio</span></a>        
+            <ul class="nav-menu">
+                <li>
+                     <a class="studio" href="./index.html">Студия</a> 
+                </li>
+                <li> 
+                    <a class="portfolio" href="./Portfolio.html">Портфолио</a>
+                </li>
+                <li>
+                     <a class="contact" href="#address">Контакты</a> 
+                </li>
             </ul>
         </nav>
         <address>
             <ul>
                 <li> 
-                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="nav-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a class="nav-tel" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
