--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <address>
             <ul>
-                <li> 
+                <li>                    
                     <a class="nav-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
@@ -43,26 +43,34 @@
             </section>               
         <section>
         <h2 class="invisible">Features</h2>
-            <ul>
+            <ul class="features">
                 <li>
-                    <a href=""><img src="./images/antenna1.svg" alt="антена" width="70" height="70"></a>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <div class="antena">
+                        <a class="center-feater" href=""><img src="./images/antenna1.svg" alt="антена" width="70" height="70"></a>
+                    </div>
+                    <h3 class="detal">Внимание к деталям</h3>
+                    <p class="detal-p">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <a href=""><img src="./images/clock1.svg" alt="часы" width="70" height="70"></a>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                   <div class="clock">
+                    <a class="center-feater" href=""><img src="./images/clock1.svg" alt="часы" width="70" height="70"></a>
+                   </div>
+                    <h3 class="punctuality">Пунктуальность</h3>
+                    <p class="punctuality-p">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>    
                 <li>
-                    <a href=""><img src="./images/diagram1.svg" alt="диаграмма" width="70" height="70"></a>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <div class="diagram">
+                        <a class="center-feater" href=""><img src="./images/diagram1.svg" alt="диаграмма" width="70" height="70"></a>
+                    </div>
+                    <h3 class="plan">Планирование</h3>
+                    <p class="plan-p">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>       
                 <li>
-                    <a href=""><img src="./images/astronaut1.svg" alt="астронавт" width="70" height="70"></a>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <div class="astro">
+                        <a class="center-feater" href=""><img src="./images/astronaut1.svg" alt="астронавт" width="70" height="70"></a>
+                    </div>
+                    <h3 class="tehno">Современные технологии</h3>
+                    <p class="tehno-p">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>            
             </ul>
         </section>
