Сделал - Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -131,40 +131,40 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="worck">
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <a href=""
+            <a class="worck1" href=""
               ><img
                 src="./images/box1.jpg"
                 alt="Десктопные приложения"
                 width="370"
                 height="294"
               />
-              Десктопные приложения</a
+              <span> Десктопные приложения</span></a
             >
           </li>
           <li>
-            <a href=""
+            <a class="worck2" href=""
               ><img
                 src="./images/box2.jpg"
                 alt="Мобильные приложения"
                 width="370"
                 height="294"
               />
-              Мобильные приложения</a
+              <span>Мобильные приложения</span></a
             >
           </li>
           <li>
-            <a href=""
+            <a class="worck3" href=""
               ><img
                 src="./images/box3.jpg"
                 alt="Дизайнерские решения"
                 width="370"
                 height="294"
               />
-              Дизайнерские решения</a
+              <span>Дизайнерские решения</span></a
             >
           </li>
         </ul>
