--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="comand">
         <h2>Наша команда</h2>
         <ul>
-          <li>
+          <li class="john">
             <a href="">
               <img src="./images/img.png" alt="фото" width="270" height="260" />
             </a>
@@ -193,7 +193,7 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="marta">
             <a href="">
               <img
                 src="./images/img(1).png"
@@ -219,7 +219,7 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="robert">
             <a href="">
               <img
                 src="./images/img(2).png"
@@ -245,7 +245,7 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="martin">
             <a href="">
               <img
                 src="./images/img(3).png"
