--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -273,10 +273,10 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="client">
         <h2>Постоянные клиенты</h2>
         <ul>
-          <li>
+          <li class="client1">
             <a href=""
               ><img
                 src="./images/Client1.svg"
@@ -285,7 +285,7 @@
                 height="90"
             /></a>
           </li>
-          <li>
+          <li class="client2">
             <a href=""
               ><img
                 src="./images/Client2.svg"
@@ -294,7 +294,7 @@
                 height="90"
             /></a>
           </li>
-          <li>
+          <li class="client3">
             <a href=""
               ><img
                 src="./images/Client3.svg"
@@ -303,7 +303,7 @@
                 height="90"
             /></a>
           </li>
-          <li>
+          <li class="client4">
             <a href=""
               ><img
                 src="./images/Client4.svg"
@@ -312,7 +312,7 @@
                 height="90"
             /></a>
           </li>
-          <li>
+          <li class="client5">
             <a href=""
               ><img
                 src="./images/Client5.svg"
@@ -321,7 +321,7 @@
                 height="90"
             /></a>
           </li>
-          <li>
+          <li class="client6">
             <a href=""
               ><img
                 src="./images/Client6.svg"
