--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -334,7 +334,7 @@
       </section>
     </main>
     <footer>
-      <a class="footer-logo" href="./index.html">Web Studio</a>
+      <a class="footer-logo" href="./index.html">Web <span>Studio</span></a>
       <address id="address">
         <ul>
           <li>г. Киев, пр-т Леси Украинки, 26</li>
