--- a/index.html
+++ b/index.html
@@ -337,16 +337,20 @@
       <a class="footer-logo" href="./index.html">Web <span>Studio</span></a>
       <address id="address">
         <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
+          <li class="street">г. Киев, пр-т Леси Украинки, 26</li>
           <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="mail-footer" href="mailto:info@example.com"
+              >info@example.com</a
+            >
           </li>
           <li>
-            <a href="tel:++380991111111">+38 099 111 11 11</a>
+            <a class="tel-footer" href="tel:++380991111111"
+              >+38 099 111 11 11</a
+            >
           </li>
         </ul>
       </address>
-      <section>
+      <section class="social">
         <h3>присоединяйтесь</h3>
         <ul>
           <li>
@@ -364,9 +368,9 @@
         </ul>
       </section>
       <section>
-        <h3>Подпишитесь на рассылку</h3>
+        <h3 class="input">Подпишитесь на рассылку</h3>
       </section>
-      <p>2020 | Developed by GoIT Students</p>
+      <p class="developed">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
