--- a/Portfolio.html
+++ b/Portfolio.html
@@ -4,213 +4,314 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
     <link
-      rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header">
-      <nav>
-        <a class="header-logo" href="./index.html"
-          >Web <span class="logo-studio">Studio</span></a
-        >
-        <ul class="nav-menu">
-          <li>
-            <a class="studio" href="./index.html">Студия</a>
-          </li>
-          <li>
-            <a class="portfolio" href="./Portfolio.html">Портфолио</a>
-          </li>
-          <li>
-            <a class="contact" href="#address">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li>
-            <a class="nav-email" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="nav-tel" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+    <header class="header container2 head2">
+      <div class="container-header container">
+        <nav class="n-menu">
+          <a class="header-logo" href="./index.html"
+            >Web <span class="logo-studio">Studio</span></a
+          >
+          <ul class="nav-menu">
+            <li>
+              <a class="studio nav-menu-first" href="./index.html">Студия</a>
+            </li>
+            <li>
+              <a class="portfolio nav-menu-first" href="./Portfolio.html"
+                >Портфолио</a
+              >
+            </li>
+            <li>
+              <a class="contact nav-menu-first" href="#address">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="heder-address">
+          <ul class="section-nav-contact">
+            <li>
+              <a class="nav-email" href="mailto:info@devstudio.com"
+                ><svg width="16" height="13" class="svg-nav-email">
+                  <use href="./images/sprite.svg#icon-envelope"></use></svg
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="nav-tel" href="tel:+380961111111"
+                ><svg width="10" height="15" class="svg-nav-tel">
+                  <use href="./images/sprite.svg#icon-smartphone"></use></svg
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
-    <main>
-      <h1 class="invisible">Portfolio</h1>
-      <section>
-        <h2 class="invisible">filters</h2>
-        <ul>
-          <li>
-            <a href="./Portfolio.html">Все</a>
-          </li>
-          <li>
-            <a href="">Веб-сайты</a>
-          </li>
-          <li>
-            <a href="">Приложения</a>
-          </li>
-          <li>
-            <a href="">Дизайн</a>
-          </li>
-          <li>
-            <a href="">Маркетинг</a>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img.jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img(1).jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img(2).jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img(3).jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img(4).jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img(5).jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img(6).jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img(7).jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
-            </a>
-          </li>
-          <li>
-            <a href="">
-              <img
-                src="./images/page2/img(8).jpg"
-                alt=""
-                width="370"
-                height="294"
-              />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
-            </a>
-          </li>
-        </ul>
-      </section>
+    <main class="main-portfolio container2">
+      <div class="container">
+        <h1 class="invisible">Portfolio</h1>
+        <section class="section-filter-all">
+          <h2 class="invisible">filters</h2>
+          <ul class="section-filter">
+            <li>
+              <button class="filter all">Все</button>
+            </li>
+            <li>
+              <button class="filter web">Веб-сайты</button>
+            </li>
+            <li>
+              <button class="filter applications">Приложения</button>
+            </li>
+            <li>
+              <button class="filter design">Дизайн</button>
+            </li>
+            <li>
+              <button class="filter marketing">Маркетинг</button>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <ul class="main-content">
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img.jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Технокряк</h2>
+                <p>Веб-сайт</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img(1).jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img(2).jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Ресторан Seafood</h2>
+                <p>Приложение</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img(3).jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Проект Prime</h2>
+                <p>Маркетинг</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img(4).jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Проект Boxes</h2>
+                <p>Приложение</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img(5).jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img(6).jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Издание Limited Edition</h2>
+                <p>Дизайн</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img(7).jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Проект LAB</h2>
+                <p>Маркетинг</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+            <li>
+              <a class="blackout" href="">
+                <img
+                  src="./images/page2/img(8).jpg"
+                  alt=""
+                  width="370"
+                  height="294"
+                />
+                <h2 class="main-h2">Growing Business</h2>
+                <p>Приложение</p>
+              </a>
+              <div class="background-hov-text">
+                <p class="hov-text">
+                  Технокряк это современная площадка распространения
+                  коронавируса. Компании используют эту платформу для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
-    <footer>
-      <a class="logo" href="./index.html">Web Studio</a>
-      <address id="address">
-        <ul>
-          <li>г. Киев, пр-т Леси Украинки, 26</li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li>
-            <a href="tel:++380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-      <section>
-        <h3>присоединяйтесь</h3>
-        <ul>
-          <li>
-            <a href="">instagram2</a>
-          </li>
-          <li>
-            <a href="">twitter1</a>
-          </li>
-          <li>
-            <a href="">facebook1</a>
-          </li>
-          <li>
-            <a href="">linkedin1</a>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h3>Подпишитесь на рассылку</h3>
-      </section>
-      <p>2020 | Developed by GoIT Students</p>
+    <footer class="section-footer container2">
+      <div class="footer container">
+        <div class="display-footer">
+          <a class="footer-logo" href="./index.html"
+            >Web <span class="logo-studio-footer">Studio</span></a
+          >
+          <address id="address">
+            <ul>
+              <li class="index">г. Киев, пр-т Леси Украинки, 26</li>
+              <li>
+                <a href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li>
+                <a href="tel:++380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <section class="join-in">
+          <h3>присоединяйтесь</h3>
+          <ul class="social-footer">
+            <li>
+              <a class="inst2" href=""
+                ><svg width="20" height="20" class="icon-inst2">
+                  <use href="./images/sprite.svg#icon-instagram-2"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="twit1" href=""
+                ><svg width="20" height="20" class="icon-twit1">
+                  <use href="./images/sprite.svg#icon-twitter-1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="face1" href=""
+                ><svg width="20" height="20" class="icon-face1">
+                  <use href="./images/sprite.svg#icon-facebook-1"></use></svg
+              ></a>
+            </li>
+            <li>
+              <a class="link1" href=""
+                ><svg width="20" height="20" class="icon-link1">
+                  <use href="./images/sprite.svg#icon-linkedin-1"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </section>
+        <section class="section-mailing">
+          <h3 class="mailing">Подпишитесь на рассылку</h3>
+          <div class="mailing-content">
+            <input class="footer-input" type="email" value="E-mail" />
+            <a class="footer-button" href="">
+              Подписаться
+              <svg width="24" height="24" class="icon">
+                <use href="./images/sprite.svg#icon-icon-send"></use></svg
+            ></a>
+          </div>
+        </section>
+      </div>
+      <!-- <p class="goit container">2020 | Developed by GoIT Students</p> -->
     </footer>
   </body>
 </html>
