--- a/Portfolio.html
+++ b/Portfolio.html
@@ -79,174 +79,201 @@
           <ul class="main-content">
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img.jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img.jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Технокряк</h2>
                 <p>Веб-сайт</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img(1).jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img(1).jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Постер New Orlean vs Golden Star</h2>
                 <p>Дизайн</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img(2).jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img(2).jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Ресторан Seafood</h2>
                 <p>Приложение</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img(3).jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img(3).jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Проект Prime</h2>
                 <p>Маркетинг</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img(4).jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img(4).jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Проект Boxes</h2>
                 <p>Приложение</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img(5).jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img(5).jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Inspiration has no Borders</h2>
                 <p>Веб-сайт</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img(6).jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img(6).jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Издание Limited Edition</h2>
                 <p>Дизайн</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img(7).jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img(7).jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Проект LAB</h2>
                 <p>Маркетинг</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
             <li>
               <a class="blackout" href="">
-                <img
-                  src="./images/page2/img(8).jpg"
-                  alt=""
-                  width="370"
-                  height="294"
-                />
+                <div class="images-box">
+                  <img
+                    src="./images/page2/img(8).jpg"
+                    alt=""
+                    width="370"
+                    height="294"
+                  />
+                  <div class="background-hov-text">
+                    <p class="hov-text">
+                      Технокряк это современная площадка распространения
+                      коронавируса. Компании используют эту платформу для
+                      цифрового шпионажа и атак на защищённые сервера
+                      конкурентов.
+                    </p>
+                  </div>
+                </div>
                 <h2 class="main-h2">Growing Business</h2>
                 <p>Приложение</p>
               </a>
-              <div class="background-hov-text">
-                <p class="hov-text">
-                  Технокряк это современная площадка распространения
-                  коронавируса. Компании используют эту платформу для цифрового
-                  шпионажа и атак на защищённые сервера конкурентов.
-                </p>
-              </div>
             </li>
           </ul>
         </section>
