--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,7 +23,9 @@
               <a class="studio nav-menu-first" href="./index.html">Студия</a>
             </li>
             <li>
-              <a class="portfolio nav-menu-first" href="./Portfolio.html"
+              <a
+                class="portfolio nav-menu-first current"
+                href="./Portfolio.html"
                 >Портфолио</a
               >
             </li>
