--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           >
           <ul class="nav-menu">
             <li>
-              <a class="studio nav-menu-first" href="./index.html">Студия</a>
+              <a class="studio nav-menu-first current" href="./index.html"
+                >Студия</a
+              >
             </li>
             <li>
               <a class="portfolio nav-menu-first" href="./Portfolio.html"
