--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,8 +16,7 @@
       <div class="container-header container">
         <nav class="n-menu">
           <a class="header-logo" href="./index.html"
-            >Web <span class="logo-studio">Studio</span></a
-          >
+            >Web <span class="logo-studio">Studio</span></a>
           <ul class="nav-menu">
             <li>
               <a class="studio nav-menu-first" href="./index.html">Студия</a>
